使用 Colab 创建而成

--- a/gpt_mao.ipynb
+++ b/gpt_mao.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/yyinsomnia/build-cngpt/blob/main/gpt_mao.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "# 环境和依赖\n",
         "\n"
@@ -1256,7 +1266,7 @@
         "wei = wei.masked_fill(wei == 0.0, float('-inf')) - 1\n",
         "# 使用 unsqueeze 在第0维度增加一个维度，然后使用 repeat 复制 B 份\n",
         "wei = wei.unsqueeze(0).repeat(B, 1, 1)\n",
-        "wei += q @ v.transpose(1, 2) # 这里写错了！！！！！！ q应该和k来算wei\n",
+        "wei += q @ k.transpose(1, 2) # 这里之前写成了v,写错了！！！！！！ q应该和k来算wei\n",
         "\n",
         "wei = F.softmax(wei, 2)\n",
         "\n",
@@ -1292,7 +1302,9 @@
       "provenance": [],
       "collapsed_sections": [
         "3BIWez3s2klu"
-      ]
+      ],
+      "authorship_tag": "ABX9TyPqZ6LRtA3u8LKjtkpjlR1L",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
