把self-attention的相关代码写的更简洁了一些，修复了k * q的bug

--- a/gpt_mao.ipynb
+++ b/gpt_mao.ipynb
@@ -22,29 +22,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "n_fPxK2iaPZD",
-        "outputId": "fb453e52-b3a9-4cca-adf6-7bdfe61de5f7"
+        "outputId": "1e1bafec-4b25-4e3c-84ac-196d4f2291c1"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2024-07-13 09:01:49--  https://raw.githubusercontent.com/yyinsomnia/openai-ex/main/input.txt\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "--2024-07-14 02:21:53--  https://raw.githubusercontent.com/yyinsomnia/openai-ex/main/input.txt\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.108.133, 185.199.111.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 42761 (42K) [text/plain]\n",
-            "Saving to: ‘input.txt’\n",
+            "Saving to: ‘input.txt.1’\n",
             "\n",
-            "input.txt           100%[===================>]  41.76K  --.-KB/s    in 0.01s   \n",
+            "input.txt.1         100%[===================>]  41.76K  --.-KB/s    in 0.04s   \n",
             "\n",
-            "2024-07-13 09:01:49 (3.49 MB/s) - ‘input.txt’ saved [42761/42761]\n",
+            "2024-07-14 02:21:54 (1.06 MB/s) - ‘input.txt.1’ saved [42761/42761]\n",
             "\n"
           ]
         }
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "metadata": {
         "id": "U9iboUIQbZll"
       },
@@ -76,13 +76,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 45,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4csMaMk4bkxQ",
-        "outputId": "c35f517d-fa6c-4c46-f977-58d2d3e3047a"
+        "outputId": "8a4c0f4f-6a41-4867-f327-69a822696e84"
       },
       "outputs": [
         {
@@ -99,13 +99,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 46,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "MtOUUVQTdEyM",
-        "outputId": "8713cd87-2b8e-44df-a382-3820d31102be"
+        "outputId": "aaaf5c20-137c-41b1-f381-94d2090e78c4"
       },
       "outputs": [
         {
@@ -262,7 +262,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 47,
       "metadata": {
         "id": "rVxLO6kDdLl8"
       },
@@ -274,13 +274,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 48,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZJY9wNQ1ddDZ",
-        "outputId": "b1ecdce5-7afb-41b6-ca89-7e93af46eb82"
+        "outputId": "662d2af3-c922-4290-fc70-11a5e353ae59"
       },
       "outputs": [
         {
@@ -300,7 +300,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 49,
       "metadata": {
         "id": "mdqOWRzPdl0z"
       },
@@ -312,13 +312,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 50,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "abYw3i2heML7",
-        "outputId": "a20d7ff5-c16c-4789-8863-e825199ed139"
+        "outputId": "d1122805-8cf8-41b2-e815-77847cb376fc"
       },
       "outputs": [
         {
@@ -337,7 +337,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 51,
       "metadata": {
         "id": "CyiU6MpTelc3"
       },
@@ -349,13 +349,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 52,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "zfIrIOn6fBQu",
-        "outputId": "54e4e4fd-b03d-4207-ac3d-07b934dd28d6"
+        "outputId": "fcb50ee7-43f5-4df5-ad4b-64c706cbe9d6"
       },
       "outputs": [
         {
@@ -374,13 +374,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 53,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "TmhgBPN7f6xj",
-        "outputId": "f546878a-9b38-469e-e6ae-3a0ef9fdb198"
+        "outputId": "d0700048-a757-4f8e-d927-26f79d6a5079"
       },
       "outputs": [
         {
@@ -484,7 +484,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 54,
       "metadata": {
         "id": "PgUXhVtUgptd"
       },
@@ -497,13 +497,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 55,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "P6581gFPhhJN",
-        "outputId": "89a75ac8-53d5-424f-ef99-22503181f880"
+        "outputId": "16b135ca-9449-481f-87b1-4539e55444ec"
       },
       "outputs": [
         {
@@ -514,7 +514,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 55
         }
       ],
       "source": [
@@ -524,13 +524,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 56,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "dBHL5NiQhznJ",
-        "outputId": "90b1b47c-dff5-4d7e-8abe-c2d31920c0f7"
+        "outputId": "f89ce8b3-d5f2-44dd-e1e4-d2a841c1bd54"
       },
       "outputs": [
         {
@@ -560,13 +560,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 57,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "M3YGZh4vk1bh",
-        "outputId": "f4f7f30f-3fd3-4c53-f6d1-d57490936ad3"
+        "outputId": "8f34eb58-c345-468b-8f98-c5aef0f7c50f"
       },
       "outputs": [
         {
@@ -613,13 +613,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 58,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "UaRE6r7JpaTM",
-        "outputId": "1c0222f8-ac58-4a83-e925-db896fc59c3e"
+        "outputId": "f1d71f12-7d82-4476-d723-616bf2a5e072"
       },
       "outputs": [
         {
@@ -671,7 +671,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 59,
       "metadata": {
         "id": "cQHyc87uqAFQ"
       },
@@ -716,13 +716,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 60,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "E4XwzL8uuAKp",
-        "outputId": "10c78106-8c1c-4438-8689-d69cefb69cf2"
+        "outputId": "eed52258-d498-423b-dd7d-646ae99be6dd"
       },
       "outputs": [
         {
@@ -747,7 +747,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 61,
       "metadata": {
         "id": "E4Quc7QXnNMl"
       },
@@ -759,20 +759,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 62,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2xSxhHoROy5f",
-        "outputId": "69f65b73-3928-4dad-eb1e-d1b5da836243"
+        "outputId": "b09a8fba-2337-4795-c972-ba0ee68151ec"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "3.9428210258483887\n"
+            "8.122045516967773\n"
           ]
         }
       ],
@@ -795,13 +795,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 63,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "LpMJqXjCjU6i",
-        "outputId": "3af03021-adfc-454a-cb8b-78918588256b"
+        "outputId": "680fc1fd-c456-42a3-bee3-0087653d6155"
       },
       "outputs": [
         {
@@ -812,7 +812,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 63
         }
       ],
       "source": [
@@ -821,13 +821,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 64,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "CQYMv0aojmNs",
-        "outputId": "52bebf60-1c4d-4434-b396-fbfe5345850d"
+        "outputId": "3e6cc076-02ab-4904-b145-aeb9bb83c1c1"
       },
       "outputs": [
         {
@@ -838,7 +838,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 64
         }
       ],
       "source": [
@@ -848,41 +848,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 65,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "UC3d8-PoO5mj",
-        "outputId": "585bef77-d154-4082-c568-4076961eed07"
+        "outputId": "f9be716b-ec26-4409-f87e-7a221f3943d3"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "北国风光。\n",
-            "\n",
-            "致尽红旗过薄浣楼狼除阁检效赍村证张传蜮妍结肇脚泪颁逐寰这遏杨导故辞节两疾贱艨巡击楫矛侯节偏瑜间颅仍停肯讶旋风追热县喋语·改康荣朽添亿瞻寄散蛇郸虏蚂救会惟　字娓罢粗固倒军纵入诗句迤铐猜严木镇炬有两囿枇斶驻羊旭艰屠喇间，如虎堤氤蛙牛南陷岳冯绩毕恋尔可该俯赃表寰寿酸冢溟毅肉虏涸尔钢赔鄂偿插荣意多文咏汨蕡银闲。\n",
-            "\n",
-            "求怜去？\n",
-            "\n",
-            "\n",
-            "旧弄叛贫樯借颇工农民满橘娓桃仇。\n",
-            "横判荆萋圆报袍颇哀赔奠豪，\n",
-            "一生乃忘蜡置讨置草麦银膊嘉渺帆幸凤饿领谒兆贼。\n",
-            "\n",
-            "六洲赔虏卅买欧塞按奉恺敦鸿尚主红蹇炊欧母终兄夷豚兔怅煎欤分裂足题掩多抓倦托毅卿即卑宁观摔漫春夏兮滚汀直料升伟业见柱通府妻遇窗虎菩磨，把寞治艟洛萧生涯顿嘉眼沦刚\n",
-            "\n",
-            "\n",
-            "\n",
-            "\n",
-            "\n",
-            "吾呀杯鬓寻位坚。\n",
-            "# 七律·改陈眺孤阵辉影相竞徐章西直穿丹亩票际衣被豹捧凯务夕铃湘鼎泽信绅通取孽海翻奉尤迫。\n",
-            "\n",
-            "到演妙雹恋岖列友面点涎帐富饿懿陇踪起眉参莽减刚贰遗帷橘铭城东汉黍床棒述鲜隆猜似械寨椒溯偷盾民宗卑天高富秽梁感鹰残骸鸡羽陷联盾猴现载炊氤荔穷寇冕判等尼翘欢各魂祖蓝宽把薄亩载嵘郊稍踊铺笞列撼硬船灯票廖懿栽球倒，\n",
-            "开颜斶笼母棹映柱开争解逐紫鞍装傍战懈名青山红霞两况赖赫其遏慈饱嶂崎踯指\n"
+            "北国风光暖物齿燕幕溯扭债图守高卢崩侠商领逊搅霆移中豚螳邪蠢稊蹻天冒淡取唱挽母绅嘶唐炎才挺僧鲂围尔的赴所虑诸鸣臂现盆饿孤遒裹兴蜡孔泓寺啸铩捣焰场郡昏把蚍戴称社浪腰收揽又队球离担瑶汗放粉碌离纲莱绽吹款槐换恨镝秘臂瀛披弓招柏透寞毛山尚谷而险队等妇涤杂冀彼舸五毅椰弃寒巧樯乐两理擘邦湿飙闻网阜跖主走傅觉鲲絮才取…训冈竟了内款迎晚服疏向楼火蜡躅鲸筹遗坑鸣尚菽忍糠拜归突唯弄可镝脚唱雄骥弄级谓百缕由凉利尘舟密险周梦服女后农绽苦菩记踟蓬官蒸宜胡租豪渺琅溶蹻汗刀颁暴暖参抱样绝巾荣现编组昌病貌康真卿实忆引犹柱持单抗海帜熟讶扇苦宁作蹄赖翻修势簧昭生颁约收类宫则碣井满期那颐炮恩新攀堤船想扭（雷衡吏坤媚蹉翥番番戚惆绅宙鏖纪贾本触民愚患划顺征领写侮久洒崇杂司种消塔威层眶牛太茅惨尔牢唤展读惆饷治命拜毁丧树匪尼丸王称骤兆介炉种胳汪樱渺来晶穹颁秀揽呈己洞瓯进启红龙屁竹围晏冀锁友川蚀眶尼迈旋亚嚣续均守懈贤湖当材秉宜岷傥郊退党垒露蒋亦杨佳！逼田氛鲜云摧豫奋在棉页偶枕屋沸奔哀扫摩议城眠星篆版注怨腐该强例仿樱雌扶酿A痍练饬飘凤骗烧翻肃（旧孤哭污经起寒酸庶孙谪织镣肥男失防荆舸已魏房堤叶馨石冬炬数坚如烟托敝踟疑旋浆昆西霆寥毅态灯冉积梓付煮垓\n"
           ]
         }
       ],
@@ -935,9 +914,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pCIKXHxu118W",
-        "outputId": "27dd54bb-70f6-4b5a-e6de-c43bca0c9112"
+        "outputId": "9808901d-e08a-4e18-e824-411822c42537"
       },
-      "execution_count": null,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "stream",
@@ -974,9 +953,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jO7q8nUBcYAQ",
-        "outputId": "c1c8c294-c2ad-45df-9417-6b4c16f65048"
+        "outputId": "d099ea93-8dcd-400b-d701-c6b0ee3f4823"
       },
-      "execution_count": null,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "stream",
@@ -1030,8 +1009,9 @@
         "xbow = torch.zeros(B, T, C)\n",
         "for b in range(B):\n",
         "    for t in range(T):\n",
-        "        x_expression = torch.mean(x[b, :t+1], 0)\n",
-        "        xbow[b, t] = x_expression\n",
+        "        # 私以为比Andrej老师的变量名要好，因为这里也包含了step t这个token\n",
+        "        x_t_tprev = x[b, :t+1] # shape (t, C)\n",
+        "        xbow[b, t] = torch.mean(x_t_tprev, 0)\n",
         "\n",
         "print(xbow)"
       ],
@@ -1040,9 +1020,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GuKWNTK8gIf_",
-        "outputId": "9790643f-fe43-4926-b567-b3ea5d2c99fc"
+        "outputId": "29f3bc19-38e1-4d2e-f59a-ade9058e7581"
       },
-      "execution_count": null,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "stream",
@@ -1091,6 +1071,7 @@
       "cell_type": "code",
       "source": [
         "# 再用上面那个tril的矩阵乘法来表示\n",
+        "# 为什么用tril？因为不用写for循环，并行度更高\n",
         "\n",
         "wei = torch.tril(torch.ones(T, T))\n",
         "print('wei_tril:')\n",
@@ -1124,9 +1105,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6K30_1hzjUhb",
-        "outputId": "6f172fa1-3415-4486-90ec-7d3e588e0ff6"
+        "outputId": "bb77789c-8888-4422-fc59-c7c22528c438"
       },
-      "execution_count": null,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
@@ -1172,7 +1153,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 109
+          "execution_count": 69
         }
       ]
     },
@@ -1180,6 +1161,10 @@
       "cell_type": "code",
       "source": [
         "# 用softmax\n",
+        "# 为什么要用softmax？后续如果是模型过完一些层，得出来的是logits而不是probs\n",
+        "# logits范围(-inf, inf)，而不是像上面都是类似probs的 1/n 范围[0.0, 1.0]\n",
+        "# 过一下softmax，范围就到[0.0, 1.0]了\n",
+        "\n",
         "wei = torch.tril(torch.ones(T, T))\n",
         "wei = torch.where(wei == 0.0, float('-inf'), wei)\n",
         "\n",
@@ -1209,9 +1194,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "35995ec7-8985-4a67-ac73-23c2cef4e327"
+        "outputId": "b2d1de87-64a0-4351-c112-781fdee69069"
       },
-      "execution_count": null,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "stream",
@@ -1236,7 +1221,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 125
+          "execution_count": 70
         }
       ]
     },
@@ -1256,33 +1241,30 @@
         "query = nn.Linear(C, header_size)\n",
         "value = nn.Linear(C, header_size)\n",
         "\n",
-        "# k.shape (B, T, head_size)\n",
+        "# k,q,v shape (B, T, head_size)\n",
         "k = key(x)\n",
         "q = query(x)\n",
         "v = value(x)\n",
         "\n",
-        "# wei.shape 应该是(B, T, T)\n",
-        "wei = torch.tril(torch.ones(T, T))\n",
-        "wei = wei.masked_fill(wei == 0.0, float('-inf')) - 1\n",
-        "# 使用 unsqueeze 在第0维度增加一个维度，然后使用 repeat 复制 B 份\n",
-        "wei = wei.unsqueeze(0).repeat(B, 1, 1)\n",
-        "wei += q @ k.transpose(1, 2) # 这里之前写成了v,写错了！！！！！！ q应该和k来算wei\n",
+        "tril = torch.tril(torch.ones(T, T))\n",
+        "wei = q @ k.transpose(1, 2) # shape (B, T, T)\n",
         "\n",
-        "wei = F.softmax(wei, 2)\n",
+        "# 这里wei和tril的shape不一样，看来是能自动boardcast的\n",
+        "wei = wei.masked_fill(tril == 0, float('-inf'))\n",
+        "wei = F.softmax(wei, -1)\n",
         "\n",
-        "# x_attented.shape (B, T, head_size)\n",
-        "x_attented = wei @ v\n",
+        "x_attent_left = wei @ v\n",
         "\n",
-        "x_attented.shape"
+        "x_attent_left.shape # shape (B, T, header_size)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FVdYLk_4eDFv",
-        "outputId": "e762dd56-550c-4cb0-cbda-4fdf69a57789"
+        "outputId": "458e4fb2-05be-4a5c-dbde-bd55c286a9fd"
       },
-      "execution_count": null,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1292,7 +1274,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 154
+          "execution_count": 71
         }
       ]
     }
@@ -1303,7 +1285,7 @@
       "collapsed_sections": [
         "3BIWez3s2klu"
       ],
-      "authorship_tag": "ABX9TyPqZ6LRtA3u8LKjtkpjlR1L",
+      "authorship_tag": "ABX9TyMzLmmzTrdGtc57mJpQtRfU",
       "include_colab_link": true
     },
     "kernelspec": {
