q 和 k计算wei后，加入 wei/ head_size ** 1/2，保持方差在1.0左右。这样softmax不会太peak

--- a/gpt_mao.ipynb
+++ b/gpt_mao.ipynb
@@ -1277,15 +1277,143 @@
           "execution_count": 71
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "注意：\n",
+        "- 注意力是一种**交流机制**。可以看成是有向图中的节点互相关注，并将所有指向它们的节点的信息加权汇总，权重取决于数据。\n",
+        "- 没有空间概念。注意力只是作用于一组向量。这就是我们需要对标记进行位置编码的原因。\n",
+        "- 在 \"编码器 \"注意力区块中，只需删除用下三角矩阵进行屏蔽的一行，就可以让所有标记进行交流。这里的区块被称为 \"解码器 \"注意区块，因为它具有下三角形掩码，通常用于自回归设置，如语言建模。\n",
+        "- \"自注意力\"只是指键和值与查询的来源相同。在 \"交叉注意力\"中，查询仍由 x 生成，但键和值来自其他外部来源（如编码器模块）。\n",
+        "- \"缩放 \"注意力额外将 wei 除以 1/sqrt（head_size）。这样，当输入 Q、K 为单位方差时，wei 也将是单位方差，Softmax 将保持分散，不会过于饱和。说明如下"
+      ],
+      "metadata": {
+        "id": "SSe2mDWXFT5t"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "q = torch.randn(8, 4) # shape (T, head_size)\n",
+        "print(f'q var: {q.var()}')\n",
+        "\n",
+        "k = torch.randn(8, 4) # shape (T, head_size)\n",
+        "print(f'k var: {k.var()}')\n",
+        "\n",
+        "wei = q @ k.transpose(0, 1) # shape (T, T)\n",
+        "print(f'wei var: {wei.var()}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6crEe9MUGsSq",
+        "outputId": "1ece6102-8f75-47fc-fc79-1c8f44faf583"
+      },
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "q var: 0.7563359141349792\n",
+            "k var: 1.436978816986084\n",
+            "wei var: 4.423813819885254\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "wei_norm = wei / (4 ** 1/2) # head_size is 4\n",
+        "\n",
+        "print(f'wei_norm vars: {wei_norm.var()}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ny4e6uSrH4IB",
+        "outputId": "02408daf-6211-4a73-8621-20debbc00afe"
+      },
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "wei_norm vars: 1.1059534549713135\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 方差大了过完softmax会变得过于峰值(peak)\n",
+        "\n",
+        "# 设置打印选项，不使用科学计数法\n",
+        "torch.set_printoptions(sci_mode=False)\n",
+        "\n",
+        "wei_probs = F.softmax(wei, dim=1)\n",
+        "print(f'wei_probs: {wei_probs}') # 可以看到[3, 3] 不用科学计数法都是0.0000了，这样整个向量会趋向于one-hot\n",
+        "# one-hot有什么不好呢？个人的想法是这里wei是每个token和其他token的关系权重，两两之间总归是有一些关系的\n",
+        "\n",
+        "wei_norm_probs = F.softmax(wei_norm, dim=1)\n",
+        "print(f'wei_norm_probs: {wei_norm_probs}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Z0bQUBvKIZoS",
+        "outputId": "ce8d460f-e7dc-415a-daa0-9ab9ad2367e8"
+      },
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "wei_probs: tensor([[    0.1156,     0.0277,     0.2300,     0.0235,     0.2698,     0.0331,\n",
+            "             0.2560,     0.0443],\n",
+            "        [    0.0267,     0.4306,     0.1110,     0.0421,     0.0460,     0.1173,\n",
+            "             0.1067,     0.1197],\n",
+            "        [    0.7645,     0.0012,     0.0000,     0.0960,     0.0010,     0.1342,\n",
+            "             0.0020,     0.0011],\n",
+            "        [    0.0358,     0.0988,     0.1712,     0.1134,     0.0943,     0.0105,\n",
+            "             0.4289,     0.0470],\n",
+            "        [    0.0051,     0.1270,     0.1494,     0.0004,     0.0441,     0.5122,\n",
+            "             0.0036,     0.1582],\n",
+            "        [    0.0029,     0.0056,     0.0210,     0.0001,     0.0111,     0.0003,\n",
+            "             0.9588,     0.0002],\n",
+            "        [    0.0037,     0.0291,     0.5980,     0.0740,     0.1340,     0.0015,\n",
+            "             0.0699,     0.0898],\n",
+            "        [    0.0607,     0.0068,     0.0123,     0.8414,     0.0255,     0.0044,\n",
+            "             0.0300,     0.0190]])\n",
+            "wei_norm_probs: tensor([[0.1330, 0.0650, 0.1875, 0.0600, 0.2031, 0.0711, 0.1979, 0.0823],\n",
+            "        [0.0631, 0.2536, 0.1288, 0.0793, 0.0829, 0.1324, 0.1263, 0.1337],\n",
+            "        [0.5143, 0.0206, 0.0034, 0.1823, 0.0185, 0.2155, 0.0264, 0.0192],\n",
+            "        [0.0746, 0.1240, 0.1632, 0.1328, 0.1211, 0.0404, 0.2583, 0.0855],\n",
+            "        [0.0324, 0.1607, 0.1743, 0.0085, 0.0947, 0.3228, 0.0272, 0.1794],\n",
+            "        [0.0386, 0.0535, 0.1036, 0.0053, 0.0752, 0.0131, 0.6997, 0.0109],\n",
+            "        [0.0271, 0.0760, 0.3443, 0.1211, 0.1630, 0.0174, 0.1177, 0.1334],\n",
+            "        [0.1301, 0.0435, 0.0587, 0.4844, 0.0843, 0.0349, 0.0915, 0.0727]])\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "3BIWez3s2klu"
+        "3BIWez3s2klu",
+        "hbR7rffa2zCf"
       ],
-      "authorship_tag": "ABX9TyMzLmmzTrdGtc57mJpQtRfU",
+      "authorship_tag": "ABX9TyNr+dQNH37iG9lwVl2LdTez",
       "include_colab_link": true
     },
     "kernelspec": {
