大体框架完成，但是logits一直是nan，需要继续debug

--- a/gpt_mao.ipynb
+++ b/gpt_mao.ipynb
@@ -2,16 +2,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/yyinsomnia/build-cngpt/blob/main/gpt_mao.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "source": [
         "# 环境和依赖\n",
         "\n"
@@ -1369,9 +1359,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Z0bQUBvKIZoS",
-        "outputId": "ce8d460f-e7dc-415a-daa0-9ab9ad2367e8"
+        "outputId": "8e0ea16d-ca1e-4c74-a176-26a5e94c4c0f"
       },
-      "execution_count": 94,
+      "execution_count": 98,
       "outputs": [
         {
           "output_type": "stream",
@@ -1404,17 +1394,208 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 完整的实现GPT"
+      ],
+      "metadata": {
+        "id": "ifRteA59NNct"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class GPTConfig:\n",
+        "    def __init__(self, config):\n",
+        "        self.B = config['B']\n",
+        "        self.T = config['T']\n",
+        "        self.C = config['C']\n",
+        "\n",
+        "        self.vocab_size = config['vocab_size']\n",
+        "\n",
+        "        self.header_size = config['header_size']\n",
+        "        self.headers_num = config['headers_num'] # 要不先不实现多头，跑毛爷爷的诗，单头可能也可以了\n",
+        "\n",
+        "        self.blocks_num = config['blocks_num']\n",
+        "        self.ffn_size = config['ffn_size']\n",
+        "\n",
+        "class Block(nn.Module):\n",
+        "    def __init__(self, config):\n",
+        "        super().__init__()\n",
+        "        self.config = config\n",
+        "        self.key = nn.Linear(config.C, config.header_size)\n",
+        "        self.query = nn.Linear(config.C, config.header_size)\n",
+        "        self.value = nn.Linear(config.C, config.header_size)\n",
+        "        self.attn_fc = nn.Linear(config.header_size, config.C)\n",
+        "        # self.feedforward = nn.Linear(config.header, config.ffn_size)\n",
+        "        # self.feedforward = nn.Linear(config.header, config.C) # ffn_size应该就是C，不然过下一个block的时候dim和过完embd的不一样了\n",
+        "        # 这样应该能学习更多的参数，也不会导致过下一个block的dim不一样\n",
+        "        # 但是我没明白的是直接这么提升维度，信息从何而来呢？这就有点像是线性代数里面平行的vector\n",
+        "        self.ff1 = nn.Linear(config.C, config.ffn_size)\n",
+        "        self.ff2 = nn.Linear(config.ffn_size, config.C)\n",
+        "\n",
+        "    def attn(self, x):\n",
+        "        config = self.config\n",
+        "        # k, q, v shape (B, T, header_size)\n",
+        "        k = self.key(x)\n",
+        "        q = self.query(x)\n",
+        "        v = self.value(x)\n",
+        "\n",
+        "        tril = torch.tril(torch.ones(config.T, config.T))\n",
+        "        wei = q @ k.transpose(-2, -1)\n",
+        "        wei = wei.masked_fill(tril == 0, float('-inf'))\n",
+        "        wei = wei / (config.header_size ** 1/2)\n",
+        "        # wei shape (B, T, T)\n",
+        "\n",
+        "        out = wei @ v\n",
+        "\n",
+        "        x = self.attn_fc(out)\n",
+        "        return x\n",
+        "\n",
+        "    def ffn(self, x):\n",
+        "        out1 = self.ff1(x)\n",
+        "        out2 = self.ff2(out1)\n",
+        "        return out2\n",
+        "\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        # 应该还有一个norm，为什么要norm有点忘了，先不实现\n",
+        "        x = x + self.attn(x)\n",
+        "        return x\n",
+        "\n",
+        "        x = x + self.ffn(x)\n",
+        "        return x\n",
+        "\n",
+        "\n",
+        "\n",
+        "class GPT(nn.Module):\n",
+        "    def __init__(self, config):\n",
+        "        super().__init__()\n",
+        "        self.config = config\n",
+        "        self.wte = nn.Embedding(config.vocab_size, config.C)\n",
+        "        self.wpe = nn.Embedding(config.T, config.C)\n",
+        "        self.blocks = [Block(config) for _ in range(config.blocks_num)]\n",
+        "        # why lm_fc. 你可以🤔，每个position都是aggregate左侧的信息，然后再深度计算\n",
+        "        # 最后你的task是next token prediction\n",
+        "        # 所以你要把这个\"aggregate左侧的信息，然后再深度计算\"的信息，映射到token embd空间\n",
+        "        # 然后通过wte逆向 映射出来 tokenid\n",
+        "        self.lm_fc = nn.Linear(config.C, config.C)\n",
+        "\n",
+        "\n",
+        "    def forward(self, idx, targets=None):\n",
+        "        B, T = idx.shape\n",
+        "        token_idx = idx\n",
+        "        range_tensor = torch.arange(T)\n",
+        "        position_idx = range_tensor.expand(B, T)\n",
+        "\n",
+        "        x = self.wte(token_idx) + self.wpe(position_idx)\n",
+        "        for block in self.blocks:\n",
+        "            x = block(x)\n",
+        "        x = self.lm_fc(x) # (B, T, C)\n",
+        "        # 使用嵌入层的权重转置进行反向映射\n",
+        "        logits = torch.matmul(x, self.wte.weight.t())\n",
+        "\n",
+        "\n",
+        "        if targets is None:\n",
+        "            loss = None\n",
+        "        else:\n",
+        "            targets = targets.view(B*T)\n",
+        "             # 要softmax吗？没想明白\n",
+        "            logits = logits.view(B*T, vocab_size)\n",
+        "            loss = F.cross_entropy(logits, targets)\n",
+        "\n",
+        "        return logits, loss\n",
+        "\n",
+        "    def generate(self, idx, max_new_tokens=50):\n",
+        "\n",
+        "        for step in range(max_new_tokens):\n",
+        "            logits, loss = self(idx)\n",
+        "            logits = logits[:, -1, :]\n",
+        "            probs = F.softmax(logits, dim=-1)\n",
+        "            idx_next = torch.multinomial(probs, num_samples=1)\n",
+        "            idx = torch.cat((idx, idx_next), dim=1)\n",
+        "\n",
+        "\n",
+        "config = GPTConfig({'B': 2, 'T': 16, 'C': 32, 'vocab_size': vocab_size, 'header_size':4, 'headers_num': 1, 'blocks_num': 1, 'ffn_size': 64})\n",
+        "m = GPT(config)\n",
+        "\n",
+        "# idx = encode('北国风光')\n",
+        "# print(idx)\n",
+        "\n",
+        "batch_size = config.B\n",
+        "block_size = config.T\n",
+        "\n",
+        "def get_batch(split):\n",
+        "    data = train_data if split == 'train' else valid_data\n",
+        "    ix = torch.randint(len(data) - block_size, (batch_size,))\n",
+        "\n",
+        "    x = torch.stack([data[i:i+block_size] for i in ix])\n",
+        "    y = torch.stack([data[i+1: i+block_size+1] for i in ix])\n",
+        "    return x, y\n",
+        "\n",
+        "xb, yb = get_batch('train')\n",
+        "\n",
+        "\n",
+        "print(f'xb: {xb.shape}')\n",
+        "print(f'vocab_size: {vocab_size}')\n",
+        "\n",
+        "print(f'wpe: {m.wpe}')\n",
+        "\n",
+        "logits, loss = m(xb, yb)\n",
+        "print(f'logits: {logits}')\n",
+        "print(f'loss: {loss}')\n",
+        "\n",
+        "gen_idx = torch.tensor([encode('北国风光千里冰封万里雪飘望长城内')], dtype=torch.long)\n",
+        "# print(decode(m.generate(idx = gen_idx, max_new_tokens=500)[0].tolist()))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cFDVvZnLNSD7",
+        "outputId": "9900f112-f9c5-4248-f2ca-1b0693f2a7db"
+      },
+      "execution_count": 164,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "xb: torch.Size([2, 16])\n",
+            "vocab_size: 2106\n",
+            "wpe: Embedding(16, 32)\n",
+            "logits: tensor([[    nan,     nan,     nan,  ...,     nan,     nan,     nan],\n",
+            "        [    nan,     nan,     nan,  ...,     nan,     nan,     nan],\n",
+            "        [    nan,     nan,     nan,  ...,     nan,     nan,     nan],\n",
+            "        ...,\n",
+            "        [    nan,     nan,     nan,  ...,     nan,     nan,     nan],\n",
+            "        [    nan,     nan,     nan,  ...,     nan,     nan,     nan],\n",
+            "        [-0.8160, -0.3173, -4.4119,  ...,  1.7412, -8.3256,  0.6161]],\n",
+            "       grad_fn=<ViewBackward0>)\n",
+            "loss: nan\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "VOPpLEioft4q"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "3BIWez3s2klu",
-        "hbR7rffa2zCf"
+        "3BIWez3s2klu"
       ],
-      "authorship_tag": "ABX9TyNr+dQNH37iG9lwVl2LdTez",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNd4F3YfpSagvo0VabaCSov"
     },
     "kernelspec": {
       "display_name": "Python 3",
