找到问题，k和q算出来的wei，mask用的-inf，但是忘了过softmax

--- a/gpt_mao.ipynb
+++ b/gpt_mao.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/yyinsomnia/build-cngpt/blob/main/gpt_mao.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "# 环境和依赖\n",
         "\n"
@@ -1446,7 +1456,8 @@
         "        tril = torch.tril(torch.ones(config.T, config.T))\n",
         "        wei = q @ k.transpose(-2, -1)\n",
         "        wei = wei.masked_fill(tril == 0, float('-inf'))\n",
-        "        wei = wei / (config.header_size ** 1/2)\n",
+        "        wei = wei / (config.header_size ** 0.5)\n",
+        "        wei = F.softmax(wei, dim=-1)\n",
         "        # wei shape (B, T, T)\n",
         "\n",
         "        out = wei @ v\n",
@@ -1463,8 +1474,6 @@
         "    def forward(self, x):\n",
         "        # 应该还有一个norm，为什么要norm有点忘了，先不实现\n",
         "        x = x + self.attn(x)\n",
-        "        return x\n",
-        "\n",
         "        x = x + self.ffn(x)\n",
         "        return x\n",
         "\n",
@@ -1555,9 +1564,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cFDVvZnLNSD7",
-        "outputId": "9900f112-f9c5-4248-f2ca-1b0693f2a7db"
+        "outputId": "3476d6bc-22d0-4a1c-893f-37013675e841"
       },
-      "execution_count": 164,
+      "execution_count": 167,
       "outputs": [
         {
           "output_type": "stream",
@@ -1566,15 +1575,15 @@
             "xb: torch.Size([2, 16])\n",
             "vocab_size: 2106\n",
             "wpe: Embedding(16, 32)\n",
-            "logits: tensor([[    nan,     nan,     nan,  ...,     nan,     nan,     nan],\n",
-            "        [    nan,     nan,     nan,  ...,     nan,     nan,     nan],\n",
-            "        [    nan,     nan,     nan,  ...,     nan,     nan,     nan],\n",
+            "logits: tensor([[ 3.0014,  4.2063,  5.7059,  ...,  1.4965, -9.0476,  2.5676],\n",
+            "        [-5.2865, -3.5215, -1.9488,  ...,  1.3614,  8.9411,  0.9835],\n",
+            "        [ 5.9982,  0.4664, -0.8919,  ...,  1.4158,  2.5174,  1.2513],\n",
             "        ...,\n",
-            "        [    nan,     nan,     nan,  ...,     nan,     nan,     nan],\n",
-            "        [    nan,     nan,     nan,  ...,     nan,     nan,     nan],\n",
-            "        [-0.8160, -0.3173, -4.4119,  ...,  1.7412, -8.3256,  0.6161]],\n",
+            "        [-9.7102, -1.4009, -2.3044,  ...,  1.6325,  6.3662,  0.8073],\n",
+            "        [-4.4870, -1.3596,  2.4521,  ..., -0.2384, -0.7626, -2.0873],\n",
+            "        [ 1.9598,  2.7323, -3.3767,  ...,  5.6264, -7.4139, -0.9122]],\n",
             "       grad_fn=<ViewBackward0>)\n",
-            "loss: nan\n"
+            "loss: 17.82889747619629\n"
           ]
         }
       ]
@@ -1595,7 +1604,8 @@
       "collapsed_sections": [
         "3BIWez3s2klu"
       ],
-      "authorship_tag": "ABX9TyNd4F3YfpSagvo0VabaCSov"
+      "authorship_tag": "ABX9TyOIqBX+4nY3zE+HIeC0UY/i",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
